[workspace]
resolver = "2"
members = [
    "common",
    "db",
    "indexer",
    "parse",
    "sol2neon",
    "solana-api",
    "proxy",
    "neon-api"
, "executor"]

[workspace.dependencies]
anyhow = "1.0.86"
hex = "0.4.3"
thiserror = "1.0.60"
tokio = "1.38.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# Solana deps
solana-account-decoder = "1.17.34"
solana-client = "1.17.34"
solana-program-test = "1.17.34"
solana-rpc-client = "1.17.34"
solana-rpc-client-api = "1.17.34"
solana-sdk = "1.17.34"
solana-transaction-status = "1.17.34"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

# Reth/Alloy deps
rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api" }
rpc-api-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }

alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999", version = "0.1.0", default-features = false, features = [
    "k256",
] }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }
alloy-sol-types = { version = "0.7.7", features = ["json"] }

alloy-rlp = "0.3.4"

[patch.crates-io]
# Hack to resolve `zeroize` version conflict between solana-* and reth. 
curve25519-dalek = { git = "https://github.com/00nktk/curve25519-dalek.git", rev = "2e37898" }
aes-gcm-siv = { git = "https://github.com/00nktk/AEADs.git", package = "aes-gcm-siv", rev = "88417e8" }
jsonrpsee-core = { git = "https://github.com/polachok/jsonrpsee", branch = "v0.22.x-remove" }
jsonrpsee = { git = "https://github.com/polachok/jsonrpsee", branch = "v0.22.x-remove" }
