[workspace]
resolver = "2"
members = [
    "common",
    "db",
    "indexer",
    "parse",
    "sol2neon",
    "solana-api",
    "proxy",
    "neon-api",
    "executor",
    "mempool",
    "operator",
]

[workspace.dependencies]
anyhow = "1.0.86"
async-trait = "0.1.81"
clap = { version = "4.5.4", features = ["derive", "env"] }
ethnum = "1.5.0"
dashmap = "6.0"
futures-util = "0.3.30"
hex = "0.4.3"
thiserror = "1.0.60"
tokio = "1.38.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter", "json"] }

# Solana deps
solana-account-decoder = "1.18"
solana-client = "1.18"
solana-program-test = "1.18"
solana-rpc-client = "1.18"
solana-rpc-client-api = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

# Reth/Alloy deps
rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api" }
rpc-api-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth" }

alloy-consensus = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999", version = "0.1.0", default-features = false, features = [
    "k256",
] }
alloy-eips = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }
alloy-network = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }
alloy-signer = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }
alloy-signer-wallet = { git = "https://github.com/alloy-rs/alloy", rev = "dd7a999" }
alloy-sol-types = { version = "0.7.7", features = ["json"] }

alloy-rlp = "0.3.4"

# Neon EVM deps
[workspace.dependencies.evm-loader]
# git = "https://github.com/neonlabsorg/neon-evm.git"
git = "https://github.com/00nktk/neon-evm.git"
# path = "../../neon-evm/evm_loader/program"
# rev = "v1.15.1"
rev = "1ab8167"
default-features = false
features = ["async-trait", "no-entrypoint", "log"]

[workspace.dependencies.neon-lib]
# git = "https://github.com/neonlabsorg/neon-evm.git"
git = "https://github.com/00nktk/neon-evm.git"
# path = "../../neon-evm/evm_loader/lib"
# rev = "v1.15.1"
rev = "1ab8167"

[patch.crates-io]
# Hack to resolve `zeroize` version conflict between solana-* and reth. 
curve25519-dalek = { git = "https://github.com/00nktk/curve25519-dalek.git", rev = "2e37898" }
aes-gcm-siv = { git = "https://github.com/00nktk/AEADs.git", package = "aes-gcm-siv", rev = "88417e8" }
jsonrpsee-core = { git = "https://github.com/polachok/jsonrpsee", branch = "v0.22.x-remove" }
jsonrpsee = { git = "https://github.com/polachok/jsonrpsee", branch = "v0.22.x-remove" }
