[package]
name = "neon-proxy-common"
version = "0.0.0"
edition = "2021"
publish = false

[features]
reth = ["rpc-api-types", "reth-primitives"]

[dependencies]
hex.workspace = true

ethnum = "1.5.0"
build-info = { version = "0.0.31", features = ["serde"] }

solana-sdk.workspace = true
solana-account-decoder.workspace = true
solana-transaction-status.workspace = true

rpc-api-types = { workspace = true, optional = true }
reth-primitives = { workspace = true, optional = true }

[dependencies.evm-loader]
git = "https://github.com/neonlabsorg/neon-evm.git"
rev = "v1.14.0"
default-features = false
features = ["async-trait", "no-entrypoint", "log"]

[dependencies.neon-lib]
git = "https://github.com/neonlabsorg/neon-evm.git"
rev = "v1.14.0"
