[package]
name = "neon-proxy-common"
version = "0.0.0"
edition = "2021"
publish = false

[features]
reth = ["rpc-api-types", "reth-primitives"]

[dependencies]
hex.workspace = true
ethnum.workspace = true

build-info = { version = "0.0.31", features = ["serde"] }
rlp = "0.5.2"

alloy-consensus.workspace = true
anyhow.workspace = true
solana-sdk.workspace = true
solana-account-decoder.workspace = true
solana-transaction-status.workspace = true

rpc-api-types = { workspace = true, optional = true }
reth-primitives = { workspace = true, optional = true }

evm-loader.workspace = true
neon-lib.workspace = true
serde = { version = "1.0.208", features = ["derive"] }
