[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
tracing = "0.1"
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "bigdecimal"], default-features = false }

common = { path = "../common", package = "neon-proxy-common" }
hex = "0.4.3"
futures-util = "0.3.30"
num-bigint = "0.4"
anyhow.workspace = true
