[package]
name = "db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", package = "neon-proxy-common" }

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
hex.workspace = true

sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "macros", "bigdecimal", "migrate"], default-features = false }

futures-util.workspace = true
num-bigint = "0.4"
num-traits = "0.2.19"
serde_json = "1.0.125"
