[package]
name = "executor"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = '../common', package = "neon-proxy-common", features = ["reth"] }
solana-api = { path = '../solana-api' }
neon-api = { path = '../neon-api', features = ["jsonrpsee"] }
db = { path = '../db' }

reth-primitives.workspace = true

alloy-signer.workspace = true
alloy-signer-wallet.workspace = true
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-rlp.workspace = true

anyhow.workspace = true
clap.workspace = true
dashmap.workspace = true
hex.workspace = true
futures-util.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

rust_decimal = "1.35"
rust_decimal_macros = "1.35"
serde_json = "1"
hex-literal = "0.4.1"
semver = "1.0.23"
arc-swap = "1.7.1"
async-channel = "2.3.1"
bytemuck = "1.18.0"
borsh = "1.5.1"

[dev-dependencies]
serial_test = "3.1.1"
async-trait.workspace = true

base64 = "0.21"
bincode = "1.3.3"
bs58 = "0.5.1"

alloy-network.workspace = true
alloy-sol-types.workspace = true

solana-account-decoder.workspace = true
solana-client.workspace = true
solana-program-test.workspace = true
solana-sdk.workspace = true
spl-token.workspace = true
spl-associated-token-account.workspace = true
tarpc = "0.29.0"
