[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
neon_parse = { path = "../parse", package = "parse" }
tracing = "0.1"
anyhow = "1"
tokio = { version = "1.37.0", features = ["full"] }

common = { path = "../common", package = "neon-proxy-common" }
solana = { path = "../solana-api", package = "solana-api" }
db = { path = "../db" }
hex = "0.4.3"
prometheus = { version = "0.13", default-features = false, features = ["process"] }
prometheus_exporter = { version = "0.8" }
