[package]
name = "indexer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon_parse = { path = "../parse", package = "parse" }
common = { path = "../common", package = "neon-proxy-common" }
solana = { path = "../solana-api", package = "solana-api" }
db = { path = "../db" }

anyhow.workspace = true
clap.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

tokio-stream = "0.1"
lru = "0.12"
backoff = { version = "0.4", features = ["tokio"] }

prometheus = { version = "0.13", default-features = false, features = [
    "process",
] }
prometheus_exporter = { version = "0.8" }
