[package]
name = "ledgerwalk"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common", package = "neon-proxy-common" }

serde_json = "1.0.113"
solana-client = "1.16.18"
tokio = "1.35.1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
async-trait = "0.1.77"
dashmap = "5.5.3"
