[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = '../common', package = "neon-proxy-common" }
db = { path = '../db' }
executor = { path = '../executor' }
solana-api = { path = '../solana-api' }
neon-api = { path = '../neon-api', features = ["jsonrpsee"] }

anyhow.workspace = true
clap = { version = "4.5.4", features = ["derive"] }
dashmap.workspace = true
jsonrpsee = { version = "0.22", features = ["server"] }
pyth-sdk-solana = "0.9.0"
reth-primitives.workspace = true
serde = { version = "1.0.208", features = ["derive"] }
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
futures-util.workspace = true
