[package]
name = "neon-api"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = '../common', package = "neon-proxy-common" }
solana-api = { path = '../solana-api', package = "solana-api" }

reth-primitives.workspace = true
alloy-rlp.workspace = true

anyhow.workspace = true
hex.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

bincode = "1.3.3"
jsonrpsee = { version = "0.22", features = ["jsonrpsee-types"], optional = true }
serde_json = "1"
serde = "1"

