[package]
name = "operator-pool"
version = "0.1.0"
edition = "2021"

[dependencies]
db = { path = '../db' }
executor = { path = "../executor" }
neon-api = { path = '../neon-api' }
operator = { path = "../operator" }
solana-api = { path = '../solana-api' }

anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

solana-sdk.workspace = true

reth-primitives.workspace = true

solana-cli-config = "1.18"
arc-swap = "1.7.1"
futures-util.workspace = true
humantime = "2.1.0"
dashmap.workspace = true
async-channel = "2.3.1"
tokio-util = { version = "0.7.12", features = ["time"] }
