[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1"
base64 = "0.21"
tracing = "0.1"
hex = "0.4"
arrayref = "0.3"
either = "1"

common = { path = "../common", package = "neon-proxy-common" }

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
