[package]
name = "parse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", package = "neon-proxy-common" }

hex.workspace = true
thiserror.workspace = true
tracing.workspace = true

base64 = "0.21"
borsh = "1.5.1"
arrayref = "0.3"
either = "1"

[dev-dependencies]
test-log = { version = "0.2", default-features = false, features = ["trace"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
