[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
common = { path = '../common', package = "neon-proxy-common", features = ["reth"] }
solana-api = { path = '../solana-api' }
neon-api = { path = '../neon-api', features = ["jsonrpsee"] }
executor = { path = "../executor" }

rpc-api.workspace = true
rpc-api-types.workspace = true
reth-primitives.workspace = true

alloy-consensus.workspace = true
alloy-rlp.workspace = true

anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

tokio = { workspace = true, features = ["full"] }

dashmap = "6.0"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
], default-features = false }

jsonrpsee = { version = "0.22", features = ["server"] }
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
serde_json = "1"
tower = "0.4.13"
tracing-log = "0.2"
clap = { version = "4.5.4", features = ["derive", "env"] }
hex-literal = "0.4.1"
hyper = "0.14.30"
futures-util = "0.3.30"
pyth-sdk-solana = "0.9.0"
