[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = { path = "../db" }
common = { path = '../common', package = "neon-proxy-common", features = ["reth"] }
solana-api = { path = '../solana-api' }
neon-api = { path = '../neon-api', features = ["jsonrpsee"] }
executor = { path = "../executor" }
mempool = { path = "../mempool" }
operator = { path = "../operator" }
operator-pool = { path = "../operator-pool" }

rpc-api.workspace = true
rpc-api-types.workspace = true
reth-primitives.workspace = true
alloy-consensus.workspace = true
alloy-rlp.workspace = true

anyhow.workspace = true
clap.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

tokio = { workspace = true, features = ["full"] }

sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "postgres",
    "macros",
], default-features = false }

jsonrpsee = { version = "0.22", features = ["server"] }
rust_decimal = "1.35"
rust_decimal_macros = "1.35"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = "3.9"
tower = "0.4.13"
tracing-log = "0.2"
hex-literal = "0.4.1"
hyper = "0.14.30"
futures-util.workspace = true
