[package]
name = "sol2neon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
common = { path = "../common", package = "neon-proxy-common" }
solana-api = { path = "../solana-api" }
neon_parse = { path = "../parse", package = "parse" }
tracing = "0.1"
tokio = { version = "1.37.0", features = ["full"] }
anyhow = "1"
hex = "0.4"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
