[package]
name = "sol2neon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common", package = "neon-proxy-common" }
solana-api = { path = "../solana-api" }
neon_parse = { path = "../parse", package = "parse" }

anyhow.workspace = true
hex.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

clap = { version = "4.5", features = ["derive"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
