[package]
name = "solana-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common", package = "neon-proxy-common" }

async-trait = "0.1.77"
serde_json = "1.0.113"
solana-client = "1.16.18"
solana-rpc-client = "1.16.18"
tokio = "1.35.1"
thiserror = "1"
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
rand = { version = "0.8.5", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
