[package]
name = "solana-api"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
common = { path = "../common", package = "neon-proxy-common" }

tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

async-trait = "0.1.80"
stream_generator = "0.1"
serde_json = "1.0.113"
futures-util = "0.3.30"
prometheus = { version = "0.13", default-features = false }
either = "1"

solana-client.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-api.workspace = true

[dev-dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
rand = { version = "0.8.5", features = ["std"] }
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
